--- a/src/app/components/role-create/role-create.component.html
+++ b/src/app/components/role-create/role-create.component.html
@@ -8,7 +8,7 @@
   </mat-form-field>
 
   <mat-form-field class="example-full-width">
-    <input matInput placeholder="Descripcion"  [(ngModel)]="descripcion" name="descripcion">
+    <input matInput placeholder="Descripcion"  [(ngModel)]="description" name="description">
   </mat-form-field>
 
   <button mat-raised-button color="primary" (click)="save()">Guardar</button>
